--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "growi-plugin-attachment-refs",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "GROWI Plugin to add ref/refimg/refs/refsimg tags",
   "keywords": [
     "growi",
@@ -38,7 +38,9 @@
     "npm-run-all": "^4.1.5",
     "prettier-stylelint": "^0.4.2",
     "react": "^16.4.1",
-    "react-dom": "^16.4.1",
+    "react-dom": "^16.4.1"
+  },
+  "peerDependencies": {
     "react-images": "^1.0.0"
   },
   "engines": {
